feat(deps): update to micronaut 3.2